--- a/.travis.yml
+++ b/.travis.yml
@@ -14,17 +14,15 @@ script:
       ([ "${DEPLOY_TAGS}" == "true" ] && [ "${TRAVIS_TAG}" != "" ]) \
      )
   then
-      openssl aes-256-cbc -K $encrypted_de69cc520442_key -iv $encrypted_de69cc520442_iv -in ./k8s-ops-secret.json.enc -out secret-k8s-ops.json -d
+      openssl aes-256-cbc -K $encrypted_2cdba463b699_key -iv $encrypted_2cdba463b699_iv -in ./k8s-ops-secret.json.enc -out secret-k8s-ops.json -d
       K8S_ENVIRONMENT_NAME="${DEPLOY_ENVIRONMENT}"
-      OPS_REPO_SLUG="Midburn/midburn-k8s"
+      OPS_REPO_SLUG="OriHoch/knesset-data-k8s"
       OPS_REPO_BRANCH="${DEPLOY_BRANCH}"
       wget https://raw.githubusercontent.com/OriHoch/sk8s-ops/master/run_docker_ops.sh
       chmod +x run_docker_ops.sh
       if ./run_docker_ops.sh "${K8S_ENVIRONMENT_NAME}" "
          RES=0;
-         ! ./helm_upgrade.sh && echo 'failed helm upgrade' && RES=1;
-         ! ./helm_upgrade_external_chart.sh spark && echo 'failed spark upgrade' && RES=1;
-         ! ./helm_upgrade_external_chart.sh volunteers && echo 'failed volunteers upgrade' && RES=1;
+         ! ./helm_upgrade_external_chart.sh pipelines-jobs --force && echo 'failed pipelines-jobs upgrade' && RES=1;
          exit "'$'"RES
       " "orihoch/sk8s-ops" "${OPS_REPO_SLUG}" "${OPS_REPO_BRANCH}"; then
         true
