--- a/charts-external/pipelines-jobs/templates/dataservices.yaml
+++ b/charts-external/pipelines-jobs/templates/dataservices.yaml
@@ -1,108 +1,61 @@
-#
-# bills
-#
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: pipeline-bills-envfrom
+  name: pipeline-dataservices1-envfrom
 data:
   PIPELINES_SCRIPT: |
     cd /pipelines &&\
-    run_pipeline ./bills/kns_bill &&\
-    run_pipeline ./bills/kns_billname &&\
-    run_pipeline ./bills/kns_billinitiator &&\
-    run_pipeline ./bills/kns_billhistoryinitiator &&\
-    run_pipeline ./bills/kns_billsplit &&\
-    run_pipeline ./bills/kns_billunion
----
-{{ dict "name" "pipeline-bills" "Values" .Values "enabled" .Values.bills.enabled | include "pipeline-job" }}
----
+    (
+      RES=0;
 
-#
-# committees
-#
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: pipeline-committees-envfrom
-data:
-  PIPELINES_SCRIPT: |
-    cd /pipelines &&\
-    run_pipeline ./committees/kns_committee &&\
-    run_pipeline ./committees/kns_jointcommittee &&\
-    run_pipeline ./committees/kns_cmtsitecode &&\
-    run_pipeline ./committees/kns_committeesession &&\
-    run_pipeline ./committees/kns_cmtsessionitem &&\
-    run_pipeline ./committees/kns_documentcommitteesession
----
-{{ dict "name" "pipeline-committees" "Values" .Values "enabled" .Values.committees.enabled | include "pipeline-job" }}
----
+      ! run_pipeline ./committees/kns_committee && RES=1;
+      ! run_pipeline ./committees/kns_jointcommittee && RES=1;
+      ! run_pipeline ./committees/kns_cmtsitecode && RES=1;
+      ! run_pipeline ./committees/kns_committeesession && RES=1;
+      ! run_pipeline ./committees/kns_cmtsessionitem && RES=1;
+      ! run_pipeline ./committees/kns_documentcommitteesession && RES=1;
 
-#
-# laws
-#
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: pipeline-laws-envfrom
-data:
-  PIPELINES_SCRIPT: |
-    cd /pipelines &&\
-    run_pipeline ./laws/kns_law &&\
-    run_pipeline ./laws/kns_law_binding &&\
-    run_pipeline ./laws/kns_document_law &&\
-    run_pipeline ./laws/kns_israel_law &&\
-    run_pipeline ./laws/kns_israel_law_name
----
-{{ dict "name" "pipeline-laws" "Values" .Values "enabled" .Values.laws.enabled | include "pipeline-job" }}
----
+      ! run_pipeline ./members/kns_person && RES=1;
+      ! run_pipeline ./members/kns_position && RES=1;
+      ! run_pipeline ./members/kns_persontoposition && RES=1;
+      ! run_pipeline ./members/kns_mksitecode && RES=1;
+      ! run_pipeline ./members/mk_individual && RES=1;
 
-#
-# members
-#
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: pipeline-members-envfrom
-data:
-  PIPELINES_SCRIPT: |
-    cd /pipelines &&\
-    run_pipeline ./members/kns_person &&\
-    run_pipeline ./members/kns_position &&\
-    run_pipeline ./members/kns_persontoposition &&\
-    run_pipeline ./members/kns_mksitecode &&\
-    run_pipeline ./members/mk_individual
----
-{{ dict "name" "pipeline-members" "Values" .Values "enabled" .Values.members.enabled | include "pipeline-job" }}
----
+      ! run_pipeline ./bills/kns_bill && RES=1;
+      ! run_pipeline ./bills/kns_billname && RES=1;
+      ! run_pipeline ./bills/kns_billinitiator && RES=1;
+      ! run_pipeline ./bills/kns_billhistoryinitiator && RES=1;
+      ! run_pipeline ./bills/kns_billsplit && RES=1;
+      ! run_pipeline ./bills/kns_billunion && RES=1;
 
-#
-# plenum
-#
+      exit $RES
+    )
+---
+{{ dict "name" "pipeline-dataservices1" "Values" .Values "enabled" .Values.dataservices.enabled "enableProxy" true | include "pipeline-job" }}
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: pipeline-plenum-envfrom
+  name: pipeline-dataservices2-envfrom
 data:
   PIPELINES_SCRIPT: |
     cd /pipelines &&\
-    run_pipeline ./plenum/kns_plenumsession &&\
-    run_pipeline ./plenum/kns_plmsessionitem &&\
-    run_pipeline ./plenum/kns_documentplenumsession
----
-{{ dict "name" "pipeline-plenum" "Values" .Values "enabled" .Values.plenum.enabled | include "pipeline-job" }}
----
+    (
+      RES=0;
 
-#
-# votes
-#
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: pipeline-votes-envfrom
-data:
-  PIPELINES_SCRIPT: |
-    cd /pipelines &&\
-    run_pipeline ./votes/votes
+      ! run_pipeline ./votes/votes && RES=1;
+
+      ! run_pipeline ./plenum/kns_plenumsession && RES=1;
+      ! run_pipeline ./plenum/kns_plmsessionitem && RES=1;
+      ! run_pipeline ./plenum/kns_documentplenumsession && RES=1;
+
+      ! run_pipeline ./laws/kns_law && RES=1;
+      ! run_pipeline ./laws/kns_law_binding && RES=1;
+      ! run_pipeline ./laws/kns_document_law && RES=1;
+      ! run_pipeline ./laws/kns_israel_law && RES=1;
+      ! run_pipeline ./laws/kns_israel_law_name RES=1;
+
+      exit $RES
+    )
 ---
-{{ dict "name" "pipeline-votes" "Values" .Values "enabled" .Values.votes.enabled | include "pipeline-job" }}
+{{ dict "name" "pipeline-dataservices2" "Values" .Values "enabled" .Values.dataservices.enabled "enableProxy" true | include "pipeline-job" }}
