--- a/charts-external/metrics/templates/grafana.yaml
+++ b/charts-external/metrics/templates/grafana.yaml
@@ -35,7 +35,9 @@ spec:
           /run.sh
         env:
         - name: GF_SERVER_ROOT_URL
-          value: {{ .Values.GF_SERVER_ROOT_URL | default "http://localhost:3000/" | quote}}
+          value: {{ .Values.GF_SERVER_ROOT_URL | default "%(protocol)s://%(domain)s:/grafana" | quote}}
+        - name: GF_SERVER_DOMAIN
+          value: {{ .Values.GF_SERVER_DOMAIN | default "localhost" | quote}}
         {{ if .Values.anonymousEnabled }}
         - {name: GF_AUTH_ANONYMOUS_ENABLED, value: "true"}
         - {name: GF_AUTH_ANONYMOUS_ORG_NAME, value: main}
@@ -46,6 +48,8 @@ spec:
         - {name: GF_DATABASE_NAME, value: "postgres"}
         - {name: GF_DATABASE_USER, value: "postgres"}
         - {name: GF_DATABASE_PASSWORD, value: "123456"}
+        - name: GF_AUTH_BASIC_ENABLED
+          value: "false"
         ports:
         - containerPort: 3000
         resources:
