--- a/charts-external/pipelines-jobs/templates/build-meetings.yaml
+++ b/charts-external/pipelines-jobs/templates/build-meetings.yaml
@@ -14,6 +14,8 @@ data:
       ! run_pipeline ./download && RES=1;
       ! run_pipeline ./join-meetings && RES=1;
       ! run_pipeline ./download_members && RES=1;
+      ! run_pipeline ./join-mks && RES=1;
+      ! run_pipeline ./create_members && RES=1;
       ! run_pipeline ./build && RES=1;
 
       rm -rf /pipelines/data/*
