--- a/templates/nginx.yaml
+++ b/templates/nginx.yaml
@@ -7,6 +7,10 @@ spec:
   ports:
   - name: "80"
     port: 80
+  {{ if .Values.traefik.enableCommitteesNext }}
+  - name: "81"
+    port: 81
+  {{ end }}
   selector:
     app: nginx
 ---
@@ -29,10 +33,10 @@ spec:
         image: nginx:alpine
         ports:
         - containerPort: 80
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        {{ if .Values.traefik.enableCommitteesNext }}
+        - containerPort: 81
+        {{ end }}
+        resources: {"requests": {"cpu": "20m", "memory": "20Mi"}}
         volumeMounts:
         - name: nginx-conf
           mountPath: /etc/nginx/conf.d
