--- a/templates/nginx-conf.yaml
+++ b/templates/nginx-conf.yaml
@@ -33,11 +33,18 @@ data:
       }
       {{ end }}
 
+      {{ if index .Values "pipelines-jobs" "committeesPackage" "enabled" }}
+      location /pipeline/committee-package/ {
+        proxy_pass http://pipeline-committee-package:5000/;
+      }
+      {{ end }}
+
       location = /pipeline {
         return 200 '<a href="http://{{ .Values.nginx.mainDomain }}/pipeline/dataservices1/">dataservices1</a>
                     <a href="http://{{ .Values.nginx.mainDomain }}/pipeline/dataservices2/">dataservices2</a>
                     <a href="http://{{ .Values.nginx.mainDomain }}/pipeline/committee-protocols/">committee-protocols</a>
-                    <a href="http://{{ .Values.nginx.mainDomain }}/pipeline/committee-build-meetings/">committee-build-meetings</a>';
+                    <a href="http://{{ .Values.nginx.mainDomain }}/pipeline/committee-build-meetings/">committee-build-meetings</a>
+                    <a href="http://{{ .Values.nginx.mainDomain }}/pipeline/committee-package/">committee-package</a>';
         add_header Content-Type text/html;
       }
       {{ end }}
