--- a/charts-external/pipelines-jobs/templates/committee-package.yaml
+++ b/charts-external/pipelines-jobs/templates/committee-package.yaml
@@ -9,6 +9,7 @@ data:
     mkdir -p /pipelines/data/committees/kns_cmtsessionitem &&\
     mkdir -p /pipelines/data/committees/kns_committeesession &&\
     mkdir -p /pipelines/data/committees/all &&\
+    mkdir -p /pipelines/data/members/all &&\
     gsutil -m rsync -x files -r gs://knesset-data-pipelines/data/committees/meeting_protocols_text/ \
                        /pipelines/data/committees/meeting_protocols_text/
     gsutil -m rsync -x files -r gs://knesset-data-pipelines/data/committees/meeting_protocols_parts/ \
@@ -19,6 +20,8 @@ data:
                        /pipelines/data/committees/kns_committeesession/
     gsutil -m rsync -r gs://knesset-data-pipelines/data/committees/all/ \
                        /pipelines/data/committees/all/
+    gsutil -m rsync -r gs://knesset-data-pipelines/data/members/all/ \
+                       /pipelines/data/members/all/
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -34,6 +37,7 @@ data:
       ! run_pipeline ./committees/join-meetings && RES=1;
       ! run_pipeline ./committees/meetings_datapackage_zip && RES=1;
       ! run_pipeline ./committees/all && RES=1;
+      ! run_pipeline ./members/all && RES=1;
 
       rm -rf /pipelines/data/committees/meeting_protocols_text;
       rm -rf /pipelines/data/committees/meeting_protocols_parts;
