minor fix for committee package job --no-deploy

--- a/charts-external/pipelines-jobs/templates/committee-package.yaml
+++ b/charts-external/pipelines-jobs/templates/committee-package.yaml
@@ -11,17 +11,13 @@ data:
     mkdir -p /pipelines/data/committees/all &&\
     mkdir -p /pipelines/data/members/all &&\
     gsutil -m rsync -x files -r gs://knesset-data-pipelines/data/committees/meeting_protocols_text/ \
-                       /pipelines/data/committees/meeting_protocols_text/
+                       /pipelines/data/committees/meeting_protocols_text/ &&\
     gsutil -m rsync -x files -r gs://knesset-data-pipelines/data/committees/meeting_protocols_parts/ \
-                       /pipelines/data/committees/meeting_protocols_parts/
+                       /pipelines/data/committees/meeting_protocols_parts/ &&\
     gsutil -m rsync -r gs://knesset-data-pipelines/data/committees/kns_cmtsessionitem/ \
-                       /pipelines/data/committees/kns_cmtsessionitem/
+                       /pipelines/data/committees/kns_cmtsessionitem/ &&\
     gsutil -m rsync -r gs://knesset-data-pipelines/data/committees/kns_committeesession/ \
                        /pipelines/data/committees/kns_committeesession/
-    gsutil -m rsync -r gs://knesset-data-pipelines/data/committees/all/ \
-                       /pipelines/data/committees/all/
-    gsutil -m rsync -r gs://knesset-data-pipelines/data/members/all/ \
-                       /pipelines/data/members/all/
 ---
 apiVersion: v1
 kind: ConfigMap
