--- a/charts-external/pipelines-jobs/templates/people.yaml
+++ b/charts-external/pipelines-jobs/templates/people.yaml
@@ -2,8 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: pipeline-people-envfrom
-data:
-  RUN_PIPELINE_CMD: run_pipeline
-  PIPELINES_SCRIPT: cd /pipelines && ./pipelines_script.sh
+data: {}
 ---
 {{ dict "name" "pipeline-people" "Values" .Values "enabled" .Values.people.enabled "image" .Values.peopleImage "outputPathPrefix" "data/people/" | include "pipeline-job" }}
