add db to allow exposing data via hasadna redash (#1) --no-deploy

--- a/environments/production/values.yaml
+++ b/environments/production/values.yaml
@@ -3,6 +3,7 @@ global:
   environmentName: production
   googleProjectId: hasadna-oknesset
   backupsBucketName: oknesset-k8s-backups
+  publicdbSecret: publicdb
 
 pipelines-jobs:
   enabled: true
@@ -51,3 +52,13 @@ traefik:
   enableLoadBalancer: true
   enableCommitteesNext: true
   committeesNextDomain: committees-next.oknesset.org
+
+publicdb:
+  enabled: true
+  resources: >
+    {"requests": {"cpu": "200m", "memory": "400Mi"}, "limits": {"cpu": "300m", "memory": "1500Mi"}}
+  adminerEnabled: true
+  enableLoadBalancer: true
+  # gcloud --project=hasadna-oknesset compute addresses create oknesset-production-publicdb --region=us-central1
+  # gcloud --project=hasadna-oknesset compute addresses describe oknesset-production-publicdb --region=us-central1 | grep ^address:
+  loadBalancerIP: "35.184.9.19"
