add committees-next chart

--- a/environments/production/values.yaml
+++ b/environments/production/values.yaml
@@ -53,6 +53,10 @@ traefik:
   enableCommitteesNext: true
   committeesNextDomain: committees-next.oknesset.org
 
+
+committees-next:
+  enabled: true
+
 publicdb:
   enabled: true
   resources: >
