final fix (hopefully) for datapublishers pipeline --no-deploy (deployed manually)

--- a/environments/production/values.yaml
+++ b/environments/production/values.yaml
@@ -22,7 +22,7 @@ pipelines-jobs:
   committeesBuildMeetings: {"enabled": true}
 
   # publish data externally (e.g. to re:dash)
-  dataPublishers: {"enabled": true}
+  datapublishers: {"enabled": true}
 
   people: {"enabled": true}
 
