--- a/charts-external/pipelines-jobs/templates/data-publishers.yaml
+++ b/charts-external/pipelines-jobs/templates/data-publishers.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: pipeline-data-publishers-envfrom
+  name: pipeline-datapublishers-envfrom
 data:
   PIPELINES_BATCH_NAME: datapublishers
 ---
-{{ dict "name" "pipeline-data-publishers" "Values" .Values "enabled" .Values.dataPublishers.enabled | include "pipeline-job" }}
+{{ dict "name" "pipeline-datapublishers" "Values" .Values "enabled" .Values.datapublishers.enabled | include "pipeline-job" }}
